# mdit-py-hugo

./: README.md  environment.yml  poetry.lock.license  pyproject.toml
mdit_py_hugo/: _shortcode_parsing.py  attribute.py  shortcode.py
tests/: test_attribute.py  test_shortcode.py
tests/resources/: attribute.md  shortcode.md
